# dir-organizer

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  MANIFEST.in  Makefile  README.md  TODO.md  exclusions.yaml  indexer.py  install.sh  logger.py  main.py  organizer.py  program_flow.md  project_structure_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  scanner.py  setup.py  test_api.py  test_app.py  test_llama_index.py
.github/workflows/: python-tests.yml
src/llm_organizer/: __init__.py  __main__.py
src/llm_organizer/cli/: commands.py
src/llm_organizer/config/: defaults.py  schema.py
src/llm_organizer/core/: indexer.py  organizer.py  scanner.py
src/llm_organizer/data/: config.yaml.example  exclusions.yaml
src/llm_organizer/models/: file_metadata.py
src/llm_organizer/utils/: __init__.py  logger.py
test_dir/: notes.md  organization_plan_20250322_141149.html  organization_plan_20250322_141319.html  test1.txt  test2.txt
tests/: conftest.py
tests/test_core/: test_scanner.py
